2004-08-19  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-folder.c (transfer_messages_to): 
	Not calling cache_xfer if destination uids not found.
	Fixes #63315

2004-08-18  Ilkka Tuohela  <hile@iki.fi>

	* configure.in: Added fi to ALL_LINGUAS

2004-08-16  Dan Winship  <danw@novell.com>

	* storage/exchange-hierarchy-somedav.c (scan_subtree): Bail out if
	the subclass returns 0 urls, rather than spewing g_warnings

2004-08-15  Artur Flinta  <aflinta@cvs.gnome.org>

	* configure.in: Added pl to ALL_LINGUAS.

2004-08-13  Dan Winship  <danw@novell.com>

	* configure.in: Bump version to 1.5.93

2004-08-13  Rodney Dawes  <dobey@novell.com>

	* acinclude.m4: Revert previous EVO_LDAP_CHECK changes, aren't working
	as well as expceted and determined in testing

2004-08-13  Rodney Dawes  <dobey@novell.com>

	* acinclude.m4: Remove EVO_CHECK_LIB
	Update EVO_LDAP_CHECK to support --with-openldap-{libs,includes}
	Sync with e-d-s acinclude.m4 (Adds GTK_DOC_CHECK)

2004-08-13  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in:
	Add another krb5 headers options, fix small errors
	in previous commit.

2004-08-13  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-delegates.c (exchange_delegates): Checking for NULL
	account. The tree view was returning a NULL account. This fixes #62248
	* calendar/e-cal-backend-exchange-calendar.c (update_x_properties):
	Fixed a build break.

2004-08-13  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-autoconfig-wizard.c: (autoconfig_gui_apply)
	Not allowing the user to create new account if already one
	account exists. 
	(is_active_exchange_account): Checks if account exists and active.
	Fixes #61330

2004-08-12  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in:
	Add option to specify location of kerberos 5 libraries.
	Needed for 64bits support.

2003-08-12  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c: (update_x_properties)