@@ -1,3 +1,10 @@
+2004-08-19  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* calendar/e-cal-backend-exchange.c 
+	(e_cal_backend_exchange_add_timezone): This was returning an invalid
+	type. This fixes #61053
+	* calendar/e-cal-backend-exchange.h : Similar
+
 2004-08-19  Sushma Rai  <rsushma@novell.com>
 
 	* camel/camel-exchange-folder.c (transfer_messages_to): 
